--- a/source/styles/blocks/section-label.scss
+++ b/source/styles/blocks/section-label.scss
@@ -3,6 +3,7 @@
   font-weight: 700;
   font-size: 12px;
   line-height: 16px;
+  letter-spacing: 0.48px;
   color: $color-base-primary;
   text-align: center;
   text-transform: uppercase;
